...
					layoutTracker.trackLayout("SearchContainer", e.nativeEvent.layout)
				}
			>
				<View style={styles.searchBar}>
					<TextInput
						style={styles.input}
						placeholder="Search anything..."
						placeholderTextColor="#999"
						value={query}
						onChangeText={handleChangeText}
						autoCorrect={false}
					/>
					{searchCount > 0 && (
...
